# muve

./: CLAUDE.md  README.md  agentide.jsx  agentide.md  package.json  vite.config.ts
.claude/agents/: archiver.md  build-check.md  reviewer.md
.claude/rules/: agent.md  general.md  git.md  rust.md  stores.md  svelte.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: theme.ts
src/lib/actions/: autoscroll.ts  codemirror.ts  resizable.ts
src/lib/agent/: handler.ts
src/lib/components/chat/: ActionBadge.svelte  ActionBlock.svelte  AgentMessage.svelte  ChatInput.svelte  ChatMessage.svelte  ChatPanel.svelte  CodePreview.svelte  DiffView.svelte  ThinkingBlock.svelte  UserMessage.svelte
src/lib/components/editor/: CodeEditor.svelte  EditorTabs.svelte  EmptyState.svelte  FilePanel.svelte
src/lib/components/ide/: IDELayout.svelte  ResizeHandle.svelte  StatusBar.svelte  TopBar.svelte
src/lib/components/sidebar/: FileTree.svelte  FileTreeNode.svelte
src/lib/demo/: data.ts  runner.ts
src/lib/stores/: agent.svelte.ts  chat.svelte.ts  files.svelte.ts  ide.svelte.ts  sessions.svelte.ts
src/lib/tauri/: commands.ts  events.ts  types.ts
src/lib/utils/: markdown.ts  shortcuts.ts  time.ts
src/routes/: +page.svelte
