[package]
name = "muve"
version = "0.1.0"
description = "A native desktop IDE for agentic programming"
authors = ["you"]
edition = "2021"

[lib]
name = "muve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
